Update and rename README.md to README

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
-# 1966-okt-30
+---------------
+| 1966-okt-30 |
+---------------
 
 # murder of cheri jo bates
 https://en.wikipedia.org/wiki/Murder_of_Cheri_Jo_Bates
 
-# Abu_Musab_al-Zarqawi
+# birth abu musab al zarqawi
 https://en.wikipedia.org/wiki/Abu_Musab_al-Zarqawi
